# diesel-test

./: Cargo.toml  README.md  db.sqlite  diesel.toml
migrations/2024-08-11-171605_create_users/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs
src/routes/: misc.rs  user.rs
