[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"  # Check for the latest version on crates.io
tokio = { version = "1", features = ["full"] }
serde = {version="1", features=["derive"]}
serde_json = "1.0"
dotenv = "0.15"
r2d2 = "0.8"
diesel = {version = "2.2.1", features = ["sqlite", "r2d2"]}
